--- a/content/index.html
+++ b/content/index.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='usb.html'>usb</a></li></ul><li><a href='USB.html'>USB</a><li><a href='happy dick.html'>happy dick</a></li>
+                     <li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='usb.html'>Next</a> >> usb<br /><h1>About</h1>
-<br /> <a href='usb.html'>Next</a> >> usb</div>
+    <div id="tipue_search_content"> <br /><h1>About</h1>
+<p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a></p>
+<p><a href="https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e">https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e</a></p>
+<p><iframe height="600" src="https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e" width="800"><iframe>
+</iframe></iframe></p><br /> </div>
         
     <!-- footer -->
       <div class="container">
