--- a/content/index.html
+++ b/content/index.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,11 +149,14 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
-<p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a></p>
-<p><a href="https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e">https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e</a></p>
-<p><iframe height="600" src="https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e" width="800"><iframe>
-</iframe></iframe></p><br /> </div>
+    <div id="tipue_search_content"> <a href='Harizard.html'>Next</a> >> Harizard<br /><h1>Pikachu</h1>
+<p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
+<p><a href="./../downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
+<p><img alt="" height="537" src="./../images/Pikachu.jpg" width="539"/></p>
+<p><a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
+<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
+<p><span></span></p>
+<br /> <a href='Harizard.html'>Next</a> >> Harizard</div>
         
     <!-- footer -->
       <div class="container">
