--- a/content/About.html
+++ b/content/About.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,11 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
-<p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a></p>
-<p><a href="https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e">https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e</a></p>
-<p><iframe height="600" src="https://dartpad.dev/?id=ea4535bffe263a94d4ce1272b991c32e" width="800"><iframe>
-</iframe></iframe></p><br /> </div>
+    <div id="tipue_search_content">Squirtle << <a href='Squirtle.html'>Previous</a> <a href='USB.html'>Next</a> >> USB<br /><h1>About</h1>
+<br />Squirtle << <a href='Squirtle.html'>Previous</a> <a href='USB.html'>Next</a> >> USB</div>
         
     <!-- footer -->
       <div class="container">
