--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -137,7 +137,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -148,4 +148,4 @@ init_mathjax();
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='Pikachu.html'>Pikachu</a><ul><li><a href='Harizard.html'>Harizard</a><ul><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li><a href='About.html'>About</a><ul><li><a href='USB.html'>USB</a><ul><li><a href='USB2.html'>USB2</a></li></ul></section></div></body></html>
