add graphics files

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,12 +1,17 @@
 <h1><span>Pikachu</span></h1>
 <p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
 <p><a href="/downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
-<p><img alt="" height="537" src="/images/Pikachu.jpg" width="539"/></p>
+<p><img alt="" height="526" src="/images/Pikachu2.PNG" width="532"/></p>
 <p><a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
 <p><span></span></p>
 <h2><span>Harizard</span></h2>
+<h4>圖片上傳-image files upload</h4>
+<p><span><img caption="false" height="373" src="/images/Capture02.PNG" width="803"/></span></p>
+<h4><span>皮卡丘-Pikachu</span></h4>
+<p><img alt="" height="876" src="/images/Capture01.PNG" width="803"/></p>
 <h3><span>Squirtle</span></h3>
 <h1>About</h1>
 <h2>USB</h2>
 <h3>USB2</h3>
+<p></p>
