--- a/content/Harizard.html
+++ b/content/Harizard.html
@@ -118,14 +118,14 @@ init_mathjax();
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>40823210</h1>
+                <h1>40823210 CP2019</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823210</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823210 CP2019</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -150,6 +150,10 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content">Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Squirtle.html'>Next</a> >> Squirtle<br /><h1>Harizard</h1>
+<h4>圖片上傳-image files upload</h4>
+<p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
+<h4><span>皮卡丘-Pikachu</span></h4>
+<p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
 <br />Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Squirtle.html'>Next</a> >> Squirtle</div>
         
     <!-- footer -->
