--- a/content/Pikachu.html
+++ b/content/Pikachu.html
@@ -118,14 +118,14 @@ init_mathjax();
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>40823210</h1>
+                <h1>40823210 CP2019</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823210</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">40823210 CP2019</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -152,7 +152,7 @@ init_mathjax();
     <div id="tipue_search_content"> <a href='Harizard.html'>Next</a> >> Harizard<br /><h1>Pikachu</h1>
 <p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
 <p><a href="./../downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
-<p><img alt="" height="537" src="./../images/Pikachu.jpg" width="539"/></p>
+<p><img alt="" height="526" src="./../images/Pikachu2.PNG" width="532"/></p>
 <p><a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
 <p><span></span></p>
