--- a/config/content.htm
+++ b/config/content.htm
@@ -1,10 +1,24 @@
 <h1><span>Pikachu</span></h1>
-<p><a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
-<p><a href="/downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
+<p>2019 Fall 計算機程式課程網頁:<a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
+<p>機械設計便覽(乙級):<a href="/downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
 <p><img alt="" height="526" src="/images/Pikachu2.PNG" width="532"/></p>
-<p><a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
+<p>###<a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
-<p><span></span></p>
+<h4><span></span>原始碼:</h4>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
+int sum;
+ 
+main(){
+  sum = 0;
+  for(i=1;i &lt;= 10 ;i++){
+    sum += i;
+    print("$sum");
+  }
+  print('sum = $sum');
+}</pre>
+<p><iframe height="600" src="https://mde.tw/dartpad" width="800"></iframe></p>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=s40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
 <h2><span>Harizard</span></h2>
 <h4>圖片上傳-image files upload</h4>
 <p><span><img caption="false" height="373" src="/images/Capture02.PNG" width="803"/></span></p>
