--- a/content/Pikachu.html
+++ b/content/Pikachu.html
@@ -167,9 +167,7 @@ main(){
   }
   print('sum = $sum');
 }</pre>
-<p><iframe height="600" src="https://mde.tw/dartpad" width="800"></iframe></p>
-<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
-<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=s40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
 <br /> <a href='Harizard.html'>Next</a> >> Harizard</div>
         
     <!-- footer -->
