--- a/content/For迴圈.html
+++ b/content/For迴圈.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='Hello.html'>Hello</a><ul class='dropdown'><li><a href='For迴圈.html'>For迴圈</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,22 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">USB << <a href='USB.html'>Previous</a> <br /><h1>USB2</h1>
-<p></p><br />USB << <a href='USB.html'>Previous</a> </div>
+    <div id="tipue_search_content">Hello << <a href='Hello.html'>Previous</a> <br /><h1>For迴圈</h1>
+<h4><span></span>原始碼 :</h4>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
+int sum;
+ 
+main(){
+  sum = 0;
+  for(i=1;i &lt;= 10 ;i++){
+    sum += i;
+    print("$sum");
+  }
+  print('sum = $sum');
+}</pre>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<p></p>
+<p></p><br />Hello << <a href='Hello.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
