--- a/content/Hello.html
+++ b/content/Hello.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='Hello.html'>Hello</a><ul class='dropdown'><li><a href='For迴圈.html'>For迴圈</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,15 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Squirtle << <a href='Squirtle.html'>Previous</a> <a href='USB.html'>Next</a> >> USB<br /><h1>About</h1>
-<br />Squirtle << <a href='Squirtle.html'>Previous</a> <a href='USB.html'>Next</a> >> USB</div>
+    <div id="tipue_search_content">Work << <a href='Work.html'>Previous</a> <a href='For迴圈.html'>Next</a> >> For迴圈<br /><h1>Hello</h1>
+<h4>原始碼 :</h4>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
+    print("Pikachu!皮卡!");
+  }</pre>
+<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
+<p><span>###</span><a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
+<p></p>
+<br />Work << <a href='Work.html'>Previous</a> <a href='For迴圈.html'>Next</a> >> For迴圈</div>
         
     <!-- footer -->
       <div class="container">
