--- a/content/Work.html
+++ b/content/Work.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='Hello.html'>Hello</a><ul class='dropdown'><li><a href='For迴圈.html'>For迴圈</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,13 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='USB2.html'>Next</a> >> USB2<br /><h1>USB</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='USB2.html'>Next</a> >> USB2</div>
+    <div id="tipue_search_content">Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello.html'>Next</a> >> Hello<br /><h1>Work</h1>
+<h4>圖片上傳</h4>
+<h5>圖片上傳-image files upload</h5>
+<p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
+<h5><span>皮卡丘-Pikachu</span></h5>
+<p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
+<br />Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello.html'>Next</a> >> Hello</div>
         
     <!-- footer -->
       <div class="container">
