--- a/content/index.html
+++ b/content/index.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='Pikachu.html'>Pikachu</a><ul class='dropdown'><li class='has-children'><a href='Harizard.html'>Harizard</a><ul class='dropdown'><li><a href='Squirtle.html'>Squirtle</a></li></li></ul></ul><li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='Hello.html'>Hello</a><ul class='dropdown'><li><a href='For迴圈.html'>For迴圈</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,26 +149,11 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Harizard.html'>Next</a> >> Harizard<br /><h1>Pikachu</h1>
+    <div id="tipue_search_content"> <a href='Work.html'>Next</a> >> Work<br /><h1>Pikachu</h1>
 <p>2019 Fall 計算機程式課程網頁:<a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
 <p>機械設計便覽(乙級):<a href="./../downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
 <p><img alt="" height="526" src="./../images/Pikachu2.PNG" width="532"/></p>
-<p>###<a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
-<p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
-<h4><span></span>原始碼:</h4>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
-int sum;
- 
-main(){
-  sum = 0;
-  for(i=1;i &lt;= 10 ;i++){
-    sum += i;
-    print("$sum");
-  }
-  print('sum = $sum');
-}</pre>
-<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
-<br /> <a href='Harizard.html'>Next</a> >> Harizard</div>
+<br /> <a href='Work.html'>Next</a> >> Work</div>
         
     <!-- footer -->
       <div class="container">
