--- a/content/For迴圈(w6).html
+++ b/content/For迴圈(w6).html
@@ -149,8 +149,23 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello(w3).html'>Next</a> >> Hello(w3)<br /><h1>Work</h1>
-<br />Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello(w3).html'>Next</a> >> Hello(w3)</div>
+    <div id="tipue_search_content">圖片上傳(w4) << <a href='圖片上傳(w4).html'>Previous</a> <a href='For迴圈與函式(w7).html'>Next</a> >> For迴圈與函式(w7)<br /><h1>For迴圈(w6)</h1>
+<h4><span></span>原始碼 :</h4>
+<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
+int sum;
+ 
+main(){
+  sum = 0;
+  for(i=1;i &lt;= 10 ;i++){
+    sum += i;
+    print("$sum");
+  }
+  print('sum = $sum');
+}</pre>
+<p> <a href="https://github.com/40823210/cp2019/blob/master/downloads/dart_ex/for/main.dart">程式碼</a>  </p>
+<p>###<a href="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark">https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark</a> </p>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
+<br />圖片上傳(w4) << <a href='圖片上傳(w4).html'>Previous</a> <a href='For迴圈與函式(w7).html'>Next</a> >> For迴圈與函式(w7)</div>
         
     <!-- footer -->
       <div class="container">
