--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -77,4 +77,8 @@ main() {
 <p><a href="https://github.com/40823210/cp2019/blob/master/downloads/dart_ex/mass_spring_damping/mass_spring_damping.dart">程式碼</a></p>
 <p>###<a href="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark">https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark</a></p>
 <p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark" width="800"></iframe></p>
-<p><img alt="" height="260" src="/images/1.png" width="500"/><img alt="" height="221" src="/images/2.png" width="500"/></p>
+<h4><span>利用 Excel 繪出上述解微分方程式模擬結果 :</span></h4>
+<p></p>
+<p><img alt="" height="260" src="/images/1.png" width="500"/></p>
+<p></p>
+<p><img alt="" height="221" src="/images/2.png" width="500"/></p>
