--- a/content/For迴圈與函式(w7).html
+++ b/content/For迴圈與函式(w7).html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello(w3).html'>Hello(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello(w3).html'>Hello(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">For迴圈(w6) << <a href='For迴圈(w6).html'>Previous</a> <br /><h1>For迴圈與函式(w7)</h1>
+    <div id="tipue_search_content">For迴圈(w6) << <a href='For迴圈(w6).html'>Previous</a> <a href='嵌入 Dartpad(w8).html'>Next</a> >> 嵌入 Dartpad(w8)<br /><h1>For迴圈與函式(w7)</h1>
 <h4>原始碼 :</h4>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">const num m = 1;
 const num f = 0.0;
@@ -197,7 +197,9 @@ main() {
 <p></p>
 <p><img alt="" height="260" src="./../images/1.png" width="500"/></p>
 <p></p>
-<p><img alt="" height="221" src="./../images/2.png" width="500"/></p><br />For迴圈(w6) << <a href='For迴圈(w6).html'>Previous</a> </div>
+<p><img alt="" height="221" src="./../images/2.png" width="500"/></p>
+<p></p>
+<br />For迴圈(w6) << <a href='For迴圈(w6).html'>Previous</a> <a href='嵌入 Dartpad(w8).html'>Next</a> >> 嵌入 Dartpad(w8)</div>
         
     <!-- footer -->
       <div class="container">
