--- a/content/建立分組倉儲(w10).html
+++ b/content/建立分組倉儲(w10).html
@@ -149,13 +149,15 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)<br /><h1>圖片上傳(w4)</h1>
-<h5>圖片上傳-image files upload</h5>
-<p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
-<h5><span>皮卡丘-Pikachu</span></h5>
-<p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
+    <div id="tipue_search_content">課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)<br /><h1>建立分組倉儲(w10)</h1>
 <p></p>
-<br />Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)</div>
+<h4>小組"倉儲&amp;網頁"名稱: CP2019bg5</h4>
+<p></p>
+<h5>CP2019bg5倉儲:<a href="https://github.com/s40523111/cp2019bg5">https://github.com/s40523111/cp2019bg5</a></h5>
+<p></p>
+<h5>CP2019bg5網頁:<a href="https://s40523111.github.io/cp2019bg5/content/index.html">https://s40523111.github.io/cp2019bg5/content/index.html</a></h5>
+<p></p>
+<br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)</div>
         
     <!-- footer -->
       <div class="container">
