--- a/content/課程筆記.html
+++ b/content/課程筆記.html
@@ -149,13 +149,10 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)<br /><h1>圖片上傳(w4)</h1>
-<h5>圖片上傳-image files upload</h5>
-<p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
-<h5><span>皮卡丘-Pikachu</span></h5>
-<p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
+    <div id="tipue_search_content">嵌入 Dartpad(w8) << <a href='嵌入 Dartpad(w8).html'>Previous</a> <a href='建立分組倉儲(w10).html'>Next</a> >> 建立分組倉儲(w10)<br /><h1>課程筆記</h1>
+<p><img alt="" height="422" src="./../images/mde筆記1.jpg" width="300"/><img caption="false" height="423" src="./../images/mde筆記2.jpg" width="300"/><img alt="" height="426" src="./../images/mde筆記3.jpg" width="300"/></p>
 <p></p>
-<br />Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)</div>
+<br />嵌入 Dartpad(w8) << <a href='嵌入 Dartpad(w8).html'>Previous</a> <a href='建立分組倉儲(w10).html'>Next</a> >> 建立分組倉儲(w10)</div>
         
     <!-- footer -->
       <div class="container">
