--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,9 +1,9 @@
-<h1><span>Pikachu</span></h1>
+<h1>Pikachu</h1>
 <p>2019 Fall 計算機程式課程網頁:<a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
 <p>40823210的倉儲:<a href="https://github.com/40823210/cp2019">https://github.com/40823210/cp2019</a></p>
 <p><img alt="" height="526" src="/images/Pikachu2.PNG" width="532"/></p>
 <h1>Work</h1>
-<h2>Hello(w3)</h2>
+<h2>Hello work(w3)</h2>
 <h4>原始碼 :</h4>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
     print("Pikachu!皮卡!");
@@ -114,3 +114,53 @@ document.getElementById("iframe").height = 600 ;
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button> <button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button> <button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('slithery')">Slithery</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
 <p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark" width="800"></iframe></p>
+<p></p>
+<h2>課程筆記</h2>
+<p><img alt="" height="422" src="/images/mde筆記1.jpg" width="300"/><img caption="false" height="423" src="/images/mde筆記2.jpg" width="300"/><img alt="" height="426" src="/images/mde筆記3.jpg" width="300"/></p>
+<p></p>
+<h2>建立分組倉儲(w10)</h2>
+<p></p>
+<h4>小組"倉儲&amp;網頁"名稱: CP2019bg5</h4>
+<p></p>
+<h5>CP2019bg5倉儲:<a href="https://github.com/s40523111/cp2019bg5">https://github.com/s40523111/cp2019bg5</a></h5>
+<p></p>
+<h5>CP2019bg5網頁:<a href="https://s40523111.github.io/cp2019bg5/content/index.html">https://s40523111.github.io/cp2019bg5/content/index.html</a></h5>
+<p></p>
+<h2>華氏與攝氏(w11)</h2>
+<p></p>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=s40523111&gh_repo=cp2019&gh_path=new/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=s40523111&gh_repo=cp2019&gh_path=new/"  + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=s40523111&gh_repo=cp2019&gh_path=new/"  + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+<!-- 取 Dart 程式的按鈕 -->
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping </button> <button onclick="getDart('temperature')">temperature</button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button></p>
+<h4>Flutter 程式</h4>
+<p><button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
+<!-- 內建放入的 Dart 原始碼 -->
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=s40523111&amp;gh_repo=cp2019&amp;gh_path=new/mass_spring_damping&amp;theme=dark" width="800"></iframe></p>
