--- a/content/華氏與攝氏(w11).html
+++ b/content/華氏與攝氏(w11).html
@@ -149,13 +149,44 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)<br /><h1>圖片上傳(w4)</h1>
-<h5>圖片上傳-image files upload</h5>
-<p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
-<h5><span>皮卡丘-Pikachu</span></h5>
-<p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
+    <div id="tipue_search_content">建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> <br /><h1>華氏與攝氏(w11)</h1>
 <p></p>
-<br />Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)</div>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823210&gh_repo=cp2019&gh_path=new/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823210&gh_repo=cp2019&gh_path=new/"  + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823210&gh_repo=cp2019&gh_path=new/"  + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+<!-- 取 Dart 程式的按鈕 -->
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping </button> <button onclick="getDart('temperature')">temperature</button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button></p>
+<h4>Flutter 程式</h4>
+<p><button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button></p>
+<!-- 內建放入的 Dart 原始碼 -->
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner= 40823210&amp;gh_repo=cp2019&amp;gh_path=new/mass_spring_damping&amp;theme=dark" width="800"></iframe></p><br />建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
