--- a/content/期中考(w9).html
+++ b/content/期中考(w9).html
@@ -149,8 +149,9 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello work(w3).html'>Next</a> >> Hello work(w3)<br /><h1>Work</h1>
-<br />Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello work(w3).html'>Next</a> >> Hello work(w3)</div>
+    <div id="tipue_search_content">課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='建立分組倉儲(w10).html'>Next</a> >> 建立分組倉儲(w10)<br /><h1>期中考(w9)</h1>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BDqYk9jlOoc" width="560"></iframe></p>
+<br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='建立分組倉儲(w10).html'>Next</a> >> 建立分組倉儲(w10)</div>
         
     <!-- footer -->
       <div class="container">
