--- a/content/建立分組倉儲(w10).html
+++ b/content/建立分組倉儲(w10).html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,14 +149,15 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)<br /><h1>建立分組倉儲(w10)</h1>
+    <div id="tipue_search_content">期中考(w9) << <a href='期中考(w9).html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)<br /><h1>建立分組倉儲(w10)</h1>
 <p></p>
 <h4>小組"倉儲&amp;網頁"名稱: CP2019bg5</h4>
 <p></p>
 <h5>CP2019bg5倉儲:<a href="https://github.com/s40523111/cp2019bg5">https://github.com/s40523111/cp2019bg5</a></h5>
 <p></p>
 <h5>CP2019bg5網頁:<a href="https://s40523111.github.io/cp2019bg5/content/index.html">https://s40523111.github.io/cp2019bg5/content/index.html</a></h5>
-<p></p><br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)</div>
+<p></p>
+<br />期中考(w9) << <a href='期中考(w9).html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)</div>
         
     <!-- footer -->
       <div class="container">
