--- a/content/課程筆記.html
+++ b/content/課程筆記.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,10 +149,10 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">嵌入 Dartpad(w8) << <a href='嵌入 Dartpad(w8).html'>Previous</a> <a href='建立分組倉儲(w10).html'>Next</a> >> 建立分組倉儲(w10)<br /><h1>課程筆記</h1>
+    <div id="tipue_search_content">嵌入 Dartpad(w8) << <a href='嵌入 Dartpad(w8).html'>Previous</a> <a href='期中考(w9).html'>Next</a> >> 期中考(w9)<br /><h1>課程筆記</h1>
 <p><img alt="" height="422" src="./../images/mde筆記1.jpg" width="300"/><img caption="false" height="423" src="./../images/mde筆記2.jpg" width="300"/><img alt="" height="426" src="./../images/mde筆記3.jpg" width="300"/></p>
 <p></p>
-<br />嵌入 Dartpad(w8) << <a href='嵌入 Dartpad(w8).html'>Previous</a> <a href='建立分組倉儲(w10).html'>Next</a> >> 建立分組倉儲(w10)</div>
+<br />嵌入 Dartpad(w8) << <a href='嵌入 Dartpad(w8).html'>Previous</a> <a href='期中考(w9).html'>Next</a> >> 期中考(w9)</div>
         
     <!-- footer -->
       <div class="container">
