--- a/content/數列(w12).html
+++ b/content/數列(w12).html
@@ -149,23 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">圖片上傳(w4) << <a href='圖片上傳(w4).html'>Previous</a> <a href='For迴圈與函式(w7).html'>Next</a> >> For迴圈與函式(w7)<br /><h1>For迴圈(w6)</h1>
-<h4><span></span>原始碼 :</h4>
-<pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">int i;
-int sum;
- 
-main(){
-  sum = 0;
-  for(i=1;i &lt;= 10 ;i++){
-    sum += i;
-    print("$sum");
-  }
-  print('sum = $sum');
-}</pre>
-<p> <a href="https://github.com/40823210/cp2019/blob/master/downloads/dart_ex/for/main.dart">程式碼</a>  </p>
-<p>###<a href="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark">https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark</a> </p>
-<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dark" width="800"></iframe></p>
-<br />圖片上傳(w4) << <a href='圖片上傳(w4).html'>Previous</a> <a href='For迴圈與函式(w7).html'>Next</a> >> For迴圈與函式(w7)</div>
+    <div id="tipue_search_content">華氏與攝氏(w11) << <a href='華氏與攝氏(w11).html'>Previous</a> <br /><h1>數列(w12)</h1>
+<p><iframe height="600" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=sequence&amp;theme=dark" width="800"></iframe></p><br />華氏與攝氏(w11) << <a href='華氏與攝氏(w11).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
