--- a/content/華氏與攝氏(w11).html
+++ b/content/華氏與攝氏(w11).html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a><li><a href='數列(w12).html'>數列(w12)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> <br /><h1>華氏與攝氏(w11)</h1>
+    <div id="tipue_search_content">建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> <a href='數列(w12).html'>Next</a> >> 數列(w12)<br /><h1>華氏與攝氏(w11)</h1>
 <p></p>
 <script>
 function getDart(dirname){
@@ -188,7 +188,9 @@ document.getElementById("iframe").height = 600 ;
 <p><button onclick="getDart('temperature')">temperature</button></p>
 <!-- 內建放入的 Dart 原始碼 -->
 <p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
-<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark" width="800"></iframe></p><br />建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> </div>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823210&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark" width="800"></iframe></p>
+<p></p>
+<br />建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> <a href='數列(w12).html'>Next</a> >> 數列(w12)</div>
         
     <!-- footer -->
       <div class="container">
