w12任務一影片

--- a/content/數列(w12).html
+++ b/content/數列(w12).html
@@ -190,8 +190,8 @@ document.getElementById("iframe").width = 800 ;
 document.getElementById("iframe").height = 600 ;
 }
 </script>
-<h4>w12影片</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/veOs2_YmfCU" width="560"></iframe></p><br />華氏與攝氏(w11) << <a href='華氏與攝氏(w11).html'>Previous</a> </div>
+<h4>w12任務一影片</h4>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nnINUti76Yk" width="560"></iframe></p><br />華氏與攝氏(w11) << <a href='華氏與攝氏(w11).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
