--- a/content/w17考試.html
+++ b/content/w17考試.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a><li><a href='數列(w12).html'>數列(w12)</a><li><a href='國旗(w14).html'>國旗(w14)</a><li><a href='w17考試.html'>w17考試</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a><li><a href='數列(w12).html'>數列(w12)</a><li><a href='國旗(w14).html'>國旗(w14)</a><li><a href='w14.html'>w14</a></li></ul><li><a href='w17考試.html'>w17考試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,7 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">國旗(w14) << <a href='國旗(w14).html'>Previous</a> <br /><h1>w17考試</h1>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <br /><h1>w17考試</h1>
 <p></p>
 <h4>純 Dart 程式</h4>
 <p><button onclick="getDart('weight-dart')">weight-1</button></p>
@@ -186,7 +186,8 @@ document.getElementById("iframe").height = 600 ;
 }
 </script>
 </p>
-<p>請輸入所要轉換的重量<br/>以數字加上 kg 或 lb:<br/><br/><input id="temp" max="30" min="1" type="text" value="20kg"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p><br />國旗(w14) << <a href='國旗(w14).html'>Previous</a> </div>
+<p>請輸入所要轉換的重量<br/>以數字加上 kg 或 lb:<br/><br/><input id="temp" max="30" min="1" type="text" value="20kg"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
+<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script><br />w14 << <a href='w14.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
