--- a/config/content.htm
+++ b/config/content.htm
@@ -212,19 +212,20 @@ document.getElementById("iframe").height = 600 ;
 }
 </script>
 <h4>w12任務一影片</h4>
-<<<<<<< HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nnINUti76Yk" width="560"></iframe></p>
 <h2>國旗(w14)</h2>
-=======
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nnINUti76Yk" width="560"></iframe></p><h2>w14</h2>
->>>>>>> 724c43a74bd89197075485e255278620093006f0
+<p>=======</p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nnINUti76Yk" width="560"></iframe></p>
+<h2>w14</h2>
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 724c43a74bd89197075485e255278620093006f0</p>
 <p>國旗</p>
 <p><canvas height="200" id="canvas" width="300"></canvas></p>
 <script src="/cp2019/new/roc_flag/roc_flag.js"></script>
 <p>溫度轉換 請輸入轉換溫度:<br/>(數字加上 C or F)<br/><br/><input id="temp" max="30" min="1" type="text" value="20F"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
-<<<<<<< HEAD
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 <p></p>
-<h2>w17考試</h2>
+<h1>w17考試</h1>
 <p></p>
 <h4>純 Dart 程式</h4>
 <p><button onclick="getDart('weight-dart')">weight-1</button></p>
@@ -262,8 +263,4 @@ document.getElementById("iframe").height = 600 ;
 </script>
 </p>
 <p>請輸入所要轉換的重量<br/>以數字加上 kg 或 lb:<br/><br/><input id="temp" max="30" min="1" type="text" value="20kg"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
-=======
-<script src="/cp2019/new/temp2/temp2.js"></script>
-<h2>查驗考試(w16)</h2>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ulq3CrU1hiM" width="560"></iframe></p>
->>>>>>> 724c43a74bd89197075485e255278620093006f0
+<script src="/../cp2019/downloads/dart_ex/weight/weight.js"></script>
