--- a/content/建立分組倉儲(w10).html
+++ b/content/建立分組倉儲(w10).html
@@ -138,11 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-<<<<<<< HEAD
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a><li><a href='數列(w12).html'>數列(w12)</a><li><a href='國旗(w14).html'>國旗(w14)</a><li><a href='w17考試.html'>w17考試</a></li>
-=======
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a><li><a href='數列(w12).html'>數列(w12)</a><li><a href='w14.html'>w14</a><li><a href='查驗考試(w16).html'>查驗考試(w16)</a></li>
->>>>>>> 724c43a74bd89197075485e255278620093006f0
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a><li><a href='課程筆記.html'>課程筆記</a><li><a href='期中考(w9).html'>期中考(w9)</a><li><a href='建立分組倉儲(w10).html'>建立分組倉儲(w10)</a><li><a href='華氏與攝氏(w11).html'>華氏與攝氏(w11)</a><li><a href='數列(w12).html'>數列(w12)</a><li><a href='國旗(w14).html'>國旗(w14)</a><li><a href='w14.html'>w14</a></li></ul><li><a href='w17考試.html'>w17考試</a></li>
                       </ul>
                 </nav>
               </div>
