--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,9 +39,9 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## 40823210個人網站
 
-### KMOLab
+### 我誰 ( !
 
 <small>
 Created by [KMOLab](http://lab.kmol.info/)
@@ -59,11 +59,11 @@ Created by [KMOLab](http://lab.kmol.info/)
     <script type="text/template">
 # 投影片快捷鍵
 
-* [溫度轉換](https://40823212.github.io/cp2019/reveal/index.html#/2)
-* [亂數分組](https://40823212.github.io/cp2019/reveal/index.html#/3)
-* [重量轉換](https://40823212.github.io/cp2019/reveal/index.html#/4)
-* [國旗](https://40823212.github.io/cp2019/reveal/index.html#/5)
-* [心得](https://40823212.github.io/cp2019/reveal/index.html#/6)
+* [溫度轉換](https://40823210.github.io/cp2019/reveal/index.html#/2)
+* [亂數分組](https://40823210.github.io/cp2019/reveal/index.html#/3)
+* [重量轉換](https://40823210.github.io/cp2019/reveal/index.html#/4)
+* [國旗](https://40823210.github.io/cp2019/reveal/index.html#/5)
+* [心得](https://40823210.github.io/cp2019/reveal/index.html#/6)
 
 
    </script>
@@ -84,12 +84,28 @@ Created by [KMOLab](http://lab.kmol.info/)
 
 
 						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
 #亂數分組
 <iframe width="1000" height="600" src="https://dartpad.github.io/embed-html.html?gh_owner=40823210&gh_repo=cp2019&gh_path=new/random_grouping&theme=dark" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </script>
+</section>
+
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
 #重量轉換
 <iframe width="1000" height="600" src="https://dartpad.github.io/embed-html.html?gh_owner=40823210&gh_repo=cp2019&gh_path=downloads/dart_ex/weight&theme=dark" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
 #國旗
 <iframe width="1000" height="600" src="https://dartpad.github.io/embed-html.html?gh_owner=40823210&gh_repo=cp2019&gh_path=downloads/dart_ex/flag&theme=dark" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </script>
+</section>
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
